--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "cli-ux": "^5.6.3",
     "http-call": "^5.3.0",
     "pg": "^8.7.1",
-    "ssh2": "^1.4.0",
-    "tslib": "^2.3.0"
+    "ssh2": "^1.5.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@heroku-cli/schema": "^1.0.25",
     "@oclif/dev-cli": "^1.26.0",
-    "@oclif/plugin-help": "^3.2.2",
+    "@oclif/plugin-help": "^3.2.3",
     "@oclif/test": "^1.2.8",
-    "@types/chai": "^4.2.21",
+    "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
     "@types/chai-string": "^1.4.2",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^12.20.18",
+    "@types/node": "^12.20.33",
     "@types/pg": "^8.6.1",
-    "@types/ssh2": "^0.5.47",
+    "@types/ssh2": "^0.5.48",
     "@types/supports-color": "^8.1.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -35,12 +35,15 @@
     "eslint-config-oclif-typescript": "^0.2.0",
     "glob": "^7.1.7",
     "globby": "^11.0.4",
-    "mocha": "^9.0.3",
-    "nock": "^13.1.1",
+    "mocha": "^9.1.2",
+    "nock": "^13.1.3",
     "nyc": "^15.1.0",
     "ts-mockito": "^2.6.1",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
+  },
+  "resolutions": {
+    "ansi-regex": "^5.0.1"
   },
   "engines": {
     "node": ">=12.9.0"
